# Glyphix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: glyphix.h
letters/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  Q.cpp  R.cpp  S.cpp  T.cpp  U.cpp  V.cpp  W.cpp  X.cpp  Y.cpp  Z.cpp
sources/: display.cpp  generator.cpp  homescreen.cpp  main.cpp  print.cpp  user-input.cpp
